force-app/main/default/objects/Inspection__c/fields/ActualInspectionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActualInspectionDateTime__c</fullName>
    <label>Actual Inspection Date/Time</label>
    <type>DateTime</type>
</CustomField>