force-app/main/default/objects/Inspection__c/fields/CeilingRoof__c.field-meta.xml
<CustomField>
    <fullName>CeilingRoof__c</fullName>
    <label>Ceiling/Roof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>