force-app/main/default/objects/Inspection__c/fields/CNTRInTransport__c.field-meta.xml
<CustomField>
    <fullName>CNTRInTransport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in Transportation</label>
    <referenceTo>Container_Info__c</referenceTo>
    <relationshipLabel>INSPECTION</relationshipLabel>
    <relationshipName>Inspectin</relationshipName>
    <type>Lookup</type>
</CustomField>