force-app/main/default/objects/Inspection__c/fields/ContainerinWDY__c.field-meta.xml
<CustomField>
    <fullName>ContainerinWDY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Container stored in Warehouse, Depot, Yard</inlineHelpText>
    <label>Container in W/D/Y</label>
    <referenceTo>CONTAINER__c</referenceTo>
    <relationshipLabel>INSPECTION</relationshipLabel>
    <relationshipName>Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>