force-app/main/default/objects/Inspection__c/fields/FloorInside__c.field-meta.xml
<CustomField>
    <fullName>FloorInside__c</fullName>
    <label>Floor (Inside)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>