force-app/main/default/objects/Inspection__c/fields/InsideOutsideDoors__c.field-meta.xml
<CustomField>
    <fullName>InsideOutsideDoors__c</fullName>
    <label>Inside/Outside Doors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>