force-app/main/default/objects/Inspection__c/fields/InspectedBy__c.field-meta.xml
<CustomField>
    <fullName>InspectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>