force-app/main/default/objects/Inspection__c/fields/LeftSide__c.field-meta.xml
<CustomField>
    <fullName>LeftSide__c</fullName>
    <label>Left Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>