force-app/main/default/objects/Inspection__c/fields/MassiveCheck__c.field-meta.xml
<CustomField>
    <fullName>MassiveCheck__c</fullName>
    <label>Massive Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>