force-app/main/default/objects/Inspection__c/fields/OutsideUndercarriage__c.field-meta.xml
<CustomField>
    <fullName>OutsideUndercarriage__c</fullName>
    <label>Outside/Undercarriage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>