force-app/main/default/objects/Inspection__c/fields/PlanInspectionDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlanInspectionDateTime__c</fullName>
    <label>Plan Inspection Date/Time</label>
    <type>DateTime</type>
</CustomField>