force-app/main/default/objects/Inspection__c/fields/RAMCreated__c.field-meta.xml
<CustomField>
    <fullName>RAMCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAM Created</label>
    <type>Checkbox</type>
</CustomField>