force-app/main/default/objects/Inspection__c/fields/RightSide__c.field-meta.xml
<CustomField>
    <fullName>RightSide__c</fullName>
    <label>Right Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InspectionResultCategory</valueSetName>
    </valueSet>
</CustomField>