force-app/main/default/objects/Inspection__c/listViews/InspectionTodayList.listView-meta.xml
<ListView>
    <fullName>InspectionTodayList</fullName>
    <columns>NAME</columns>
    <columns>PlanInspectionDateTime__c</columns>
    <columns>InspectedBy__c</columns>
    <columns>CNTRInTransport__c</columns>
    <columns>ContainerinWDY__c</columns>
    <columns>OutsideUndercarriage__c</columns>
    <columns>InsideOutsideDoors__c</columns>
    <columns>RightSide__c</columns>
    <columns>LeftSide__c</columns>
    <columns>FrontWall__c</columns>
    <columns>CeilingRoof__c</columns>
    <columns>FloorInside__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PlanInspectionDateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today List</label>
</ListView>